fix no pinned msg wrong color

--- a/ui/src/components/chat/pinned_messages/style.scss
+++ b/ui/src/components/chat/pinned_messages/style.scss
@@ -31,6 +31,7 @@
     align-items: center; 
     text-align: center; 
     padding: var(--padding-more);
+    color: var(--text-color);
 }
 
 .pinned-message-wrap {
